# HTML-Fragmentator

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: split_msg.py
src/tests/: funcs_t.py  test_msg_split.py
src/tests/data/: bad_tags.html  impossible.html  microdemo150.html
