[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "split_msg"
version = "0.1.0"
description = "test"
authors = [
    { name = "nk27sss", email = "nk2704g@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"

[project.dependencies]
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
